--- a/css/style.css
+++ b/css/style.css
@@ -145,10 +145,10 @@ a:hover, span:hover {
 }
 
 .back-color {
-  background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
-  background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  background: -webkit-gradient(linear, left top, right top, from(#FF8FFD), to(#538AFF));
+  background: -webkit-linear-gradient(left, #FF8FFD, #538AFF);
+  background: -o-linear-gradient(left, #FF8FFD, #538AFF);
+  background: linear-gradient(to right, #FF8FFD, #538AFF);
 }
 
 .line {
@@ -998,10 +998,10 @@ a:hover, span:hover {
   height: 100%;
   width: 100%;
   background: #12c2e9;
-  background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
-  background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  background: -webkit-gradient(linear, left top, right top, from(#FF8FFD), to(#538AFF));
+  background: -webkit-linear-gradient(left, #FF8FFD, #538AFF);
+  background: -o-linear-gradient(left, #FF8FFD, #538AFF);
+  background: linear-gradient(to right, #FF8FFD, #538AFF);
 }
 
 .pace.pace-inactive {
@@ -1651,10 +1651,10 @@ a:hover, span:hover {
 }
 
 .butn.color {
-  background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
-  background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  background: -webkit-gradient(linear, left top, right top, from(#FF8FFD), to(#538AFF));
+  background: -webkit-linear-gradient(left, #FF8FFD, #538AFF);
+  background: -o-linear-gradient(left, #FF8FFD, #538AFF);
+  background: linear-gradient(to right, #FF8FFD, #538AFF);
   border: transparent;
 }
 
@@ -2556,10 +2556,10 @@ a:hover, span:hover {
   left: -5px;
   right: -5px;
   bottom: -5px;
-  background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
-  background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  background: -webkit-gradient(linear, left top, right top, from(#FF8FFD), to(#538AFF));
+  background: -webkit-linear-gradient(left, #FF8FFD, #538AFF);
+  background: -o-linear-gradient(left, #FF8FFD, #538AFF);
+  background: linear-gradient(to right, #FF8FFD, #538AFF);
   border-radius: 15px;
   -webkit-transform: rotate(-3deg);
   -ms-transform: rotate(-3deg);
@@ -2669,10 +2669,10 @@ a:hover, span:hover {
   bottom: -1px;
   right: -1px;
   border-radius: 5px;
-  background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
-  background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  background: -webkit-gradient(linear, left top, right top, from(#FF8FFD), to(#538AFF));
+  background: -webkit-linear-gradient(left, #FF8FFD, #538AFF);
+  background: -o-linear-gradient(left, #FF8FFD, #538AFF);
+  background: linear-gradient(to right, #FF8FFD, #538AFF);
   z-index: -2;
 }
 
@@ -3919,10 +3919,10 @@ a:hover, span:hover {
   left: -1px;
   bottom: -1px;
   right: -1px;
-  background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
-  background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  background: -webkit-gradient(linear, left top, right top, from(#FF8FFD), to(#538AFF));
+  background: -webkit-linear-gradient(left, #FF8FFD, #538AFF);
+  background: -o-linear-gradient(left, #FF8FFD, #538AFF);
+  background: linear-gradient(to right, #FF8FFD, #538AFF);
   z-index: -2;
 }
 
@@ -4294,10 +4294,10 @@ a:hover, span:hover {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
-  background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  background: -webkit-gradient(linear, left top, right top, from(#FF8FFD), to(#538AFF));
+  background: -webkit-linear-gradient(left, #FF8FFD, #538AFF);
+  background: -o-linear-gradient(left, #FF8FFD, #538AFF);
+  background: linear-gradient(to right, #FF8FFD, #538AFF);
   z-index: -1;
   opacity: .05;
 }
@@ -4417,10 +4417,10 @@ a:hover, span:hover {
 
 .services .step-item .icon {
   color: #12c2e9;
-  background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
-  background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  background: -webkit-gradient(linear, left top, right top, from(#FF8FFD), to(#538AFF));
+  background: -webkit-linear-gradient(left, #FF8FFD, #538AFF);
+  background: -o-linear-gradient(left, #FF8FFD, #538AFF);
+  background: linear-gradient(to right, #FF8FFD, #538AFF);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 40px;
@@ -4494,10 +4494,10 @@ a:hover, span:hover {
   left: -1px;
   bottom: -1px;
   right: 0px;
-  background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
-  background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  background: -webkit-gradient(linear, left top, right top, from(#FF8FFD), to(#538AFF));
+  background: -webkit-linear-gradient(left, #FF8FFD, #538AFF);
+  background: -o-linear-gradient(left, #FF8FFD, #538AFF);
+  background: linear-gradient(to right, #FF8FFD, #538AFF);
   z-index: -2;
   opacity: 0;
   -webkit-transition: all .4s;
@@ -6120,10 +6120,10 @@ a:hover, span:hover {
   left: 0;
   right: 0;
   bottom: 5px;
-  background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
-  background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  background: -webkit-gradient(linear, left top, right top, from(#FF8FFD), to(#538AFF));
+  background: -webkit-linear-gradient(left, #FF8FFD, #538AFF);
+  background: -o-linear-gradient(left, #FF8FFD, #538AFF);
+  background: linear-gradient(to right, #FF8FFD, #538AFF);
   opacity: 0;
   z-index: -1;
   -webkit-transition: all .7s;
@@ -6188,10 +6188,10 @@ a:hover, span:hover {
   left: 0;
   right: 0;
   bottom: 5px;
-  background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
-  background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  background: -webkit-gradient(linear, left top, right top, from(#FF8FFD), to(#538AFF));
+  background: -webkit-linear-gradient(left, #FF8FFD, #538AFF);
+  background: -o-linear-gradient(left, #FF8FFD, #538AFF);
+  background: linear-gradient(to right, #FF8FFD, #538AFF);
   opacity: 0;
   z-index: -1;
   -webkit-transition: all .7s;
@@ -6597,10 +6597,10 @@ a:hover, span:hover {
   top: -10px;
   right: -10px;
   bottom: -10px;
-  background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
-  background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  background: -webkit-gradient(linear, left top, right top, from(#FF8FFD), to(#538AFF));
+  background: -webkit-linear-gradient(left, #FF8FFD, #538AFF);
+  background: -o-linear-gradient(left, #FF8FFD, #538AFF);
+  background: linear-gradient(to right, #FF8FFD, #538AFF);
   z-index: -4;
 }
 
@@ -7005,10 +7005,10 @@ a:hover, span:hover {
   left: 0;
   height: 1px;
   width: 40%;
-  background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
-  background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  background: -webkit-gradient(linear, left top, right top, from(#FF8FFD), to(#538AFF));
+  background: -webkit-linear-gradient(left, #FF8FFD, #538AFF);
+  background: -o-linear-gradient(left, #FF8FFD, #538AFF);
+  background: linear-gradient(to right, #FF8FFD, #538AFF);
   -webkit-transition: all .4s;
   -o-transition: all .4s;
   transition: all .4s;
