--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@
     |--- BASE
 
         |- responsive
-	
+
 
 
 ---------------------------------------------------------------- */
@@ -69,6 +69,10 @@ body {
   font-weight: 400;
   overflow-x: hidden !important;
   font-family: 'Poppins', sans-serif;
+  scrollbar-width: none;
+}
+body::-webkit-scrollbar {
+  display: none;
 }
 
 img {
@@ -127,9 +131,9 @@ a:hover, span:hover {
   text-decoration: none;
 }
 
-.container {
+/* .container {
   max-width: 1200px;
-}
+} */
 
 .custom-font {
   font-family: 'Poppins', sans-serif;
@@ -4941,6 +4945,7 @@ a:hover, span:hover {
 .portfolio .gallery .items {
   padding: 0 50px;
   margin: 50px 0;
+  width: 50%;
 }
 
 .portfolio .gallery .items.lg-mr {
@@ -4950,6 +4955,7 @@ a:hover, span:hover {
 .portfolio .gallery .items .item-img {
   overflow: hidden;
   position: relative;
+  border-radius: 15px;
   -webkit-clip-path: inset(0);
   clip-path: inset(0);
   -webkit-transition: all .3s;
@@ -7722,6 +7728,11 @@ a:hover, span:hover {
   color: #fff;
 }
 
+.form-group select{
+  background: #222;
+  color: #fff;
+}
+
 .contact-sec.style2 .form input, .contact-sec.style2 .form textarea {
   padding: 20px;
   background: rgba(255, 255, 255, 0.01);
@@ -8729,5 +8740,59 @@ footer .item .copy-right p a {
   }
   100% {
       background-position: 0% 50%;
+  }
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -10px;
+}
+
+.col {
+  flex: 1;
+  padding: 10px;
+}
+
+.product {
+  margin-top: 30px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.product:hover {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+.product img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.product h3 {
+  font-size: 20px;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.product p {
+  font-size: 16px;
+  margin: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .col {
+    flex-basis: 100%;
   }
 }
